--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -423,4 +423,14 @@
         <item>"/system/framework/arm64/boot.oat"</item>
         <item>"/system/framework/arm64/boot-core-libart.oat"</item>
    </string-array>
+
+   <!-- Control the behavior when the user long presses the home button.
+           0 - Nothing
+           1 - Recent apps view in SystemUI
+           2 - Launch assist intent
+        This needs to match the constants in
+        policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
+   -->
+    <integer name="config_longPressOnHomeBehavior">2</integer>
+
 </resources>
