oneplus3: add alert slider overlay

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -47,4 +47,7 @@
     -->
     <integer name="config_longPressOnHardwareHomeBehavior">3</integer>
 
+    <!-- Whether device has physical tri state switch -->
+    <bool name="config_hasAlertSlider">true</bool>
+
 </resources>
