oneplus3: re-enable gestures

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -13,14 +13,11 @@
 ** distributed under the License is distributed on an "AS IS" BASIS,
 ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ** See the License for the specific language governing permissions and
--** limitations under the License.
+** limitations under the License.
 */
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Wether device has dash charging support -->
-    <bool name="config_hasDashCharger">true</bool>
-
     <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
@@ -47,7 +44,60 @@
     -->
     <integer name="config_longPressOnHardwareHomeBehavior">3</integer>
 
-    <!-- Whether device has physical tri state switch -->
+    <!-- Keycodes of gestures. If the gesture is not supported set it to 0. -->
+    <integer name="config_doubleTapKeyCode">59</integer>
+
+    <integer name="config_drawOKeyCode">60</integer>
+
+    <integer name="config_twoFingerSwipeKeyCode">61</integer>
+
+    <integer name="config_drawVKeyCode">62</integer>
+
+    <integer name="config_drawArrowLeftKeyCode">63</integer>
+
+    <integer name="config_drawArrowRightKeyCode">64</integer>
+
+    <integer name="config_drawInverseVKeyCode">65</integer>
+
+    <integer name="config_oneFingerSwipeLeftKeyCode">66</integer>
+
+    <integer name="config_oneFingerSwipeRightKeyCode">67</integer>
+
+    <integer name="config_drawMKeyCode">68</integer>
+
+    <integer name="config_drawWKeyCode">87</integer>
+
+    <integer name="config_oneFingerSwipeUpKeyCode">88</integer>
+
+    <integer name="config_oneFingerSwipeDownKeyCode">183</integer>
+
+    <!-- Default settings for gestures
+            0 - Disabled
+            1 - Wake device
+            2 - Toggle flashlight
+            3 - Toggle airplane mode
+            4 - Play/Pause music
+            5 - Next music
+            6 - Previous music
+            7 - Open camera
+            8 - Open dialer -->
+    <integer name="config_doubleTapDefault">1</integer>
+
+    <integer name="config_drawVDefault">2</integer>
+
+    <integer name="config_drawODefault">7</integer>
+
+    <integer name="config_drawArrowLeftDefault">6</integer>
+
+    <integer name="config_drawArrowRightDefault">5</integer>
+
+    <!-- Whether to intercept inputs on screen off. -->
+    <bool name="config_enableKeyHandler">true</bool>
+
+    <!-- Whether device has fysical tri state switch -->
     <bool name="config_hasAlertSlider">true</bool>
+
+    <!-- Wether device has dash charging support -->
+    <bool name="config_hasDashCharger">true</bool>
 
 </resources>
