oneplus3: add boot-ext to the Pinner Service Config
* "boot-ext" is the next in the critical path
   after "boot-core-libart".

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -440,6 +440,7 @@
         <item>"/system/framework/arm64/boot.oat"</item>
         <item>"/system/framework/arm64/boot-core-libart.oat"</item>
         <item>"/system/framework/arm64/boot-QPerformance.oat"</item>
+        <item>"/system/framework/arm64/boot-ext.oat"</item>
    </string-array>
 
    <!-- Control the behavior when the user long presses the home button.
