--- a/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
@@ -21,4 +21,13 @@
 <resources>
     <!-- HDR needs 1x frame -->
     <string name="pref_camera_hdr_need_1x_default" translatable="false">false</string>
+
+    <!-- Default auto exposure setting. Do not translate. -->
+    <string name="pref_camera_autoexposure_default">center-weighted</string>
+
+    <!-- Default face  detection setting. -->
+    <string name="pref_camera_facedetection_default" translatable="false">on</string>
+
+    <!-- Default Anti Banding setting. -->
+    <string name="pref_camera_antibanding_default">on</string>
 </resources>
