oneplus3: pin camera app
* For a better performing camera app.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -449,4 +449,8 @@
     <bool name="config_notifyClientOnFingerprintCancelSuccess">true</bool>
 
     <bool name="config_volte_preferred">true</bool>
+
+    <!-- Should the pinner service pin the Camera application? -->
+    <bool name="config_pinnerCameraApp">true</bool>
+
 </resources>
