--- a/device/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/device/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -76,6 +76,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <!-- Config that controls whether to transmit static image instead of
              preview video stream -->
         <boolean name="transmit_static_image" value="false"/>
+        <!-- default Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="false"/>
     </carrier_config>
 
     <carrier_config mcc="222" mnc="01">
@@ -98,6 +100,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="854">
@@ -115,6 +119,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="855">
@@ -132,6 +138,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="856">
@@ -149,6 +157,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="857">
@@ -166,6 +176,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="858">
@@ -183,6 +195,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="859">
@@ -200,6 +214,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="860">
@@ -217,6 +233,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="861">
@@ -234,6 +252,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="862">
@@ -251,6 +271,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="863">
@@ -268,6 +290,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="864">
@@ -285,6 +309,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="865">
@@ -302,6 +328,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="866">
@@ -319,6 +347,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="867">
@@ -336,6 +366,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="868">
@@ -353,6 +385,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="869">
@@ -370,6 +404,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="870">
@@ -387,6 +423,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="871">
@@ -404,6 +442,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="872">
@@ -421,6 +461,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="873">
@@ -438,6 +480,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="405" mnc="874">
@@ -455,6 +499,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="show_call_session_event_toast" value="false"/>
         <boolean name="show_data_usage_toast" value="false"/>
         <boolean name="config_retry_sms_over_ims" value="true"/>
+        <!-- Config to validate RCS enriched call capability -->
+        <boolean name="config_enriched_call_capable" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="450" mnc="05">
