--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -405,9 +405,9 @@
         <item>0x41800000</item> <!-- CPUBW_MIN_FREQ resource opcode-->
         <item>0x33</item>       <!-- CPUBW_MIN_FREQ resource value-->
         <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
-        <item>1000</item> <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x4B0</item> <!-- CPUBOOST MIN_FREQ resource value -->
         <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
-        <item>1000</item> <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x4B0</item> <!-- CPUBOOST MIN_FREQ resource value -->
         <item>0x40C00000</item> <!-- SCHEDBOOST resource opcode-->
         <item>0x1</item>        <!-- SCHEDBOOST resource value-->
         <item>0x40C28000</item> <!-- SCHEDGROUP resource opcode-->
@@ -418,6 +418,10 @@
    <integer-array name="scrollboost_param_value">
         <item>0x40C00000</item> <!-- SCHEDBOOST resource opcode-->
         <item>0x1</item>        <!-- SCHEDBOOST resource value-->
+        <item>0x40800000</item> <!-- CPUBOOST_MIN_FREQ BIG CORE resource opcode -->
+        <item>0x4B0</item> <!-- CPUBOOST MIN_FREQ resource value -->
+        <item>0x40800100</item> <!-- CPUBOOST_MIN_FREQ LITTLE Core resource opcode -->
+        <item>0x4B0</item> <!-- CPUBOOST MIN_FREQ resource value -->
    </integer-array>
    <bool name="config_enableKeypressOptimization">true</bool>
    <integer-array name="keypress_param_value">
