op3: Support SRGB mode.
Change-Id: Ie07e8bbb82290ea1b502232c4c6213dee2108faf

--- a/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
+++ b/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
@@ -55,4 +55,7 @@
     <!-- Intercept inputs on screen off. -->
     <bool name="config_enableKeyHandler">true</bool>
 
+    <!-- SRGB -->
+    <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
+
 </resources>
