op3: Support SRGB mode.
Change-Id: Ie07e8bbb82290ea1b502232c4c6213dee2108faf

--- a/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
+++ b/overlay/AOSPAFrameworksOnePlusOverlay/res/values/pa_config.xml
@@ -58,4 +58,7 @@
     <!-- Whether or not swipe up gesture's opt-in setting is available on this device. -->
     <bool name="config_swipe_up_gesture_setting_available">false</bool>
 
+    <!-- SRGB -->
+    <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
+
 </resources>
