oneplus3: overlay: disable navbar

--- a/overlay/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/pa_config.xml
@@ -105,4 +105,6 @@
   <!-- sRGB sysfs path -->
   <string name="config_srgb_path">/sys/class/graphics/fb0/SRGB</string>
 
+  <!-- Internal default to navigation bar value -->
+  <bool name="config_defaultToNavigationBar">false</bool>
 </resources>
