oneplus3: camera: Use high quality denoising for videos
This replaces TNR and CDS with QC's "high-quality"
denoising mode which is supported by our HAL swimmingly.

That results in videos with much less noise.

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
@@ -27,4 +27,8 @@
 
     <!-- Default face  detection setting. -->
     <string name="pref_camera_facedetection_default" translatable="false">on</string>
+
+    <!-- Default noise reduction setting. Do not translate. -->
+    <string name="pref_camera_noise_reduction_default">high-quality</string>
+
 </resources>
