oneplus3: Enable DIS/EIS by default
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/qcomstrings.xml
@@ -31,4 +31,7 @@
     <!-- Default noise reduction setting. Do not translate. -->
     <string name="pref_camera_noise_reduction_default">high-quality</string>
 
+    <!-- Default DIS/EIS setting. Do not translate. -->
+    <string name="pref_camera_dis_default">enable</string>
+
 </resources>
